<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    android:background="#008080">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/randnum"
        android:textColor="#FFFF"
        android:textSize="37dp"
        android:textStyle="bold"
        android:padding="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minNum"
            android:textColor="#FFFF"
            android:textSize="20dp"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextMinimum"
            android:layout_width="150dp"
            android:hint="@string/hintNums"
            android:inputType="number"
            android:textColorHint="#AEADAD"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxNum"
            android:textColor="#FFFF"
            android:textSize="20dp"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextMaximum"
            android:layout_width="150dp"
            android:hint="@string/hintNums"
            android:inputType="number"
            android:textColorHint="#AEADAD"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="#FF5733"
        android:text="@string/enter"
        android:textColor="#FFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/randNumDisplay"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:text="0"
        android:textSize="120dp"
        android:textColor="#FFFF"
        android:layout_gravity="center"/>



</LinearLayout>