<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    android:background="#008080"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textColor="#FFFF"
        android:textSize="40dp"
        android:textStyle="bold"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etxtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintUserName"
        android:textColorHint="#b6b6b6"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:textColorHint="#b6b6b6"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="#CB593C"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnGoRegister"
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="#CB593C"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:text="@string/register" />

    <ImageView
        android:id="@+id/imgViewLogo"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="-290dp"/>

</LinearLayout>