<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    android:background="#CB593C"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/spinwheel"
        android:textColor="#FFFF"
        android:textSize="40dp"
        android:textStyle="bold"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imgViewWheel"
        android:paddingTop="20dp"
        android:layout_marginBottom="-90dp"
        android:src="@drawable/pointer" />

    <ImageView
        android:id="@+id/imgViewWheel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="-75dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSpin"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="4dp"
            android:background="#f4ad42"
            android:text="@string/spin"
            android:textColor="#FFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLegend"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="62dp"
            android:background="#f4ad42"
            android:text="@string/legend"
            android:textColor="#FFFF"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMainMenu"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="4dp"
            android:background="#008080"
            android:text="@string/exit"
            android:textColor="#FFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="62dp"
            android:background="#008080"
            android:text="@string/save"
            android:textColor="#FFFF"
            android:textStyle="bold"/>

    </RelativeLayout>
</LinearLayout>